--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "11.2.0",
+    "@ckeditor/ckeditor5-react": "1.1.0",
     "react": "16.8.0",
-    "react-ckeditor-component": "1.1.0",
     "react-dom": "16.8.0",
     "react-scripts": "2.0.3"
   },
