--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@ckeditor/ckeditor5-react": "1.1.0",
     "react": "16.8.0",
     "react-dom": "16.8.0",
-    "react-scripts": "2.0.3"
+    "react-scripts": "2.0.3",
+    "styled-components": "4.1.3"
   },
   "devDependencies": {},
   "scripts": {
